cmake_minimum_required(VERSION 3.12)
project(C_in_kaoyan)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(1 1.cpp)
add_executable(2 2.cpp)
add_executable(3 3.cpp)
add_executable(4 4.cpp)
add_executable(5 5.cpp)
add_executable(6 6.cpp)
#add_executable(7)
#add_executable(8)
#add_executable(9)

